--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -75,6 +75,7 @@
     <string name="query" formatted="false">Surveys: %d Shots: %d Stations: %d\nLength: %d Depth: %d</string>
     <string name="no_files">No files</string>
     <string name="reading_file">Reading file %1$s</string>
+    <string name="read_survey">Read survey %1$s\n</string>
     <string name="clear">Clear</string>
     <string name="plan_proj">Plan</string>
     <string name="profile_proj">Profile</string>
@@ -159,11 +160,13 @@
     <string name="no_model">No 3D model</string>
     <string name="no_topodroid_model">Not a TopoDroid model</string>
 
-    <string name="error_file_not_found">Error: file not found %1$s</string>
-    <string name="error_file_not_readable">Error: file not readable %1$s</string>
+    <string name="error_file_not_found">Error: file %1$s not found</string>
+    <string name="error_file_not_readable">Error: file %1$s not readable</string>
+    <string name="error_file_read">Error: file %1$s failed read</string>
+    <string name="error_survey_read">Error: survey %1$s failed read</string>
     <string name="error_io_exception">Error: IO exception %1$s</string>
-    <string name="error_parser_error">Error: parser error %1$s</string>
-    <string name="error_export_failed">Error: failed export %1$s</string>
+    <string name="error_parser_error">Error: parsing %1$s</string>
+    <string name="error_export_failed">Error: export %1$s failed</string>
 
     <string name="warning_not_overwrite">Warning: not overwriting existing file %1$s</string>
     <!-- UNUSED string name="warning_not_txt">Warning: not txt file %1$s</string -->
