--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -182,6 +182,7 @@
     <string name="warning_no_file">Warning: no 3d file found</string>
     <string name="warning_empty_cwd">Warning: empty base path</string>
     <string name="warning_no_parent">Warning: cannot go to parent folder</string>
+    <string name="no_permissions">The app cannot run without the required permissions</string>
 
     <string name="done_fractals">Done fractals dims</string>
     <string name="done_convexhull">Done convex-hull walls</string>
