--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -172,6 +172,9 @@
     <string name="error_parser_error">Error: parsing %1$s</string>
     <string name="error_export_failed">Error: export %1$s failed</string>
 
+    <string name="export_gltf_ok">Exported glTF file</string>
+    <string name="export_gltf_fail">Failed glTf export</string>
+
     <string name="warning_not_overwrite">Warning: not overwriting existing file %1$s</string>
     <!-- UNUSED string name="warning_not_txt">Warning: not txt file %1$s</string -->
     <!-- UNUSED string name="warning_not_kml">Warning: not kml file %1$s</string -->
