--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="btn_ok">OK</string>
     <string name="btn_cancel">Cancel</string>
     <string name="btn_close">Close</string>
+    <string name="btn_save">Save</string>
     <string name="btn_bind">Rebind</string>
     <string name="btn_compute">Compute</string>
 
@@ -118,6 +119,7 @@
     <string name="btn_start">Start</string>
     <string name="btn_stop">Stop</string>
 
+    <string name="survey_edit">Survey Properties</string>
     <string name="survey_list">SURVEYS</string>
     <string name="survey_legs"> Legs: </string>
     <string name="survey_legs_length"> Legs length: </string>
@@ -138,6 +140,8 @@
 
     <string name="bt_not_started">Bluetooth is down</string>
     <string name="bt_no_comm">Bluetooth device not found</string>
+    <string name="bt_no_survey">Bluetooth survey not opened</string>
+    <string name="bt_survey_edit">Bluetooth Survey Edit</string>
 
     <string name="SURVEYS">S U R V E Y S</string>
     <string name="INFO">I N F O</string>
